# UDP_Livechart

./: README.md
chartReceiver/: CMakeLists.txt  Main.qml  main.cpp  udphandler.cpp  udphandler.h
sender/: CMakeLists.txt  main.cpp  udphandler.cpp  udphandler.h
